# serde_human_bytes

./: Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
rustdoc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
rustdoc/hex/: all.html  index.html  sidebar-items.js
rustdoc/quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
rustdoc/schemars/: all.html  derive.JsonSchema.html  derive.JsonSchema_repr.html  index.html  macro.schema_for.html  macro.schema_for_value.html  trait.JsonSchema.html  type.Map.html  type.MapEntry.html  type.Set.html
rustdoc/schemars_derive/: all.html  derive.JsonSchema.html  derive.JsonSchema_repr.html  index.html
rustdoc/search.index/: 009248c93be8.js  00ccb0c8dc82.js  00cf377f11b7.js  00d39104ee28.js  016000833163.js  01b2618075f2.js  0219b0fc68cb.js  02382a89dadb.js  023ef7ae8067.js  02a3619ce241.js  02c2b5285169.js  033e4aee45d6.js  0379a1a9af54.js  03d9244d6361.js  03fbb663c412.js  048d6254690e.js  04c1a3fbdca1.js  04d50b2a368a.js  05ab77eeae91.js  062dbbfc9f1c.js  06eabc46d65a.js  07121cf72351.js  077630789581.js  07c004d53ca5.js  07d4cffbe27c.js  08726dcc8824.js  08b7179579ab.js  09297430a729.js  09584e6aa3de.js  09734348ab98.js  09db1caf7f6d.js  0a07d7a99062.js  0b13c58b572e.js  0b49844139eb.js  0c6152361cab.js  0c64ffecaf94.js  (+311 more)
src/: base64_vec.rs  base64_vec_type.rs  hex.rs  hex_array.rs  hex_array_type.rs  lib.rs
tests/: hex.rs
(+482 files in other folders)
